# AGILE

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/comp_spmv/: CMakeLists.txt  comp_spmv.cpp  config.h  test.sh
apps/comp_spmv/spmv/: FAQ  Makefile  README.txt  SpMV.h  SpMV_alloc.cu  SpMV_compute.cpp  SpMV_gen.cpp  SpMV_inspect.cpp  SpMV_inspect.h  SpMV_kernel.h  cache.h  (+1 more)
apps/gridding/: CMakeLists.txt  build_test_data.m  clean_test_data.m  lsqr_performance_test.m  test1024.sh  test2048.sh  test256.sh  test512.sh  test512_florian.sh  test_gb_interp_vs_mult.m  test_gridding.sh  test_interp2.m  test_interp_vs_mult.m  test_inverse_gridding.sh  testloop_1024.sh
apps/imt_irgn/: CMakeLists.txt  dcmtk-install.txt  images.qrc  imt_mrcmd.cpp  imt_mrcmd.h  main.cpp
apps/interp2d/: CMakeLists.txt  interp2d.cpp  test.sh
apps/lsqr/: Makefile  config.hpp  lsqr.cpp  readme.txt  test_lsqr.m
apps/matlab_simple/: Makefile  comparison.m  dense_multiplication.cpp
apps/spmvm/: readme.txt  spmvm.cpp
apps/tgv_radial_image_recon/: CMakeLists.txt  ParseParam.cu  ParseParam.h  computation_times_comparison.txt  display_TGV2_results.m  generate_paper_plots.m  make_CUDA_data_radial_4ch.m  nfft2d.cu  nfft2d.cu~  nfft2d.h  nfft2d_tgv_reco_CPU.cpp  nfft2d_tgv_recon_nogfx.cu  nfft2d_tgv_recon_nogfx.cu~  readme.txt  recon_24.crd  recon_24.wgt  recon_24_param.txt  recon_32.crd  recon_32.wgt  recon_32_param.txt  recon_48.crd  recon_48.wgt  recon_48_param.txt  recon_96.crd  recon_96.wgt  recon_96_param.txt
doc/: CMakeLists.txt  Doxyfile.in  agile.css  agile.js  agilehead.html  mainpage.dox
include/: CMakeLists.txt
include/agile/: CMakeLists.txt  agile.hpp  basic_math.hpp  cpu_matrix.hpp  cpu_vector.hpp  cpu_vector_base.hpp  exception.hpp  gpu_complex.hpp  gpu_config.hpp.in  gpu_cs_matrix.hpp  gpu_environment.hpp  gpu_host_vector.hpp  gpu_matrix.hpp  gpu_matrix_pitched.hpp  gpu_memory.hpp  gpu_timer.hpp  gpu_type_traits.hpp  gpu_vector.hpp  gpu_vector_base.hpp  gpu_vector_range.hpp  io.hpp  matrixhelper.h  quadtree.hpp  radix_exchange_sort.hpp  ublas_bindings.hpp
src/: CMakeLists.txt  gpu_blas_common.ipp  gpu_communicator.cu  gpu_cs_matrix.cu.in  gpu_cs_matrix.ipp  gpu_environment.cpp  gpu_matrix.cpp.in  gpu_matrix.ipp  gpu_matrix_pitched.cu.in  gpu_matrix_pitched.ipp  gpu_memory.cu  gpu_vector.cu.in  gpu_vector.ipp  quadtree.cpp
src/calc/: fft.cpp  fft.cpp.in  genkspacefov.cpp  genkspacefov.cpp.in  irgn.cpp  irgn.cpp.in  l2solve.cpp  l2solve.cpp.in  postprocess.cpp  postprocess.cpp.in  tgvsolve.cpp  tgvsolve.cpp.in  tvsolve.cpp  tvsolve.cpp.in
src/io/: dicom.cpp  io_utils.cpp  readSiemensVD11.cpp
test/: CMakeLists.txt  test_defines.h
test/dense_matrix_IO_Test/: CMakeLists.txt  dense_matrix_IO_test.cpp  dense_matrix_test.m
test/file_io_test/: CMakeLists.txt  file_io_test.cpp
test/gmres_test/: CMakeLists.txt  gmres_test.cpp
test/gpu_crs_matrix/: CMakeLists.txt  gpu_crs_matrix_test.cpp
test/gpu_matrix_double/: CMakeLists.txt  gpu_matrix_double_test.cpp
test/gpu_matrix_float/: CMakeLists.txt  gpu_matrix_float_test.cpp
test/gpu_matrix_pitched/: CMakeLists.txt  gpu_matrix_pitched_test.cpp
test/gpu_matrix_stdcomplexdouble/: CMakeLists.txt  gpu_matrix_stdcomplexdouble_test.cpp
test/gpu_matrix_stdcomplexfloat/: CMakeLists.txt  gpu_matrix_stdcomplexfloat_test.cpp
test/gpu_matrix_vs_gpu_matrix_pitched_double/: CMakeLists.txt  MultiplyMatrixScalar.sh  MultiplyMatrixVectorHermitianTest .sh  MultiplyMatrixVectorTest.sh  gpu_matrix_vs_gpu_matrix_pitched_double_edit.cpp  gpu_matrix_vs_gpu_matrix_pitched_double_test.cpp
test/gpu_matrix_vs_gpu_matrix_pitched_float/: CMakeLists.txt  MultiplyMatrixScalar.sh  MultiplyMatrixVectorHermitianTest .sh  MultiplyMatrixVectorTest.sh  gpu_matrix_vs_gpu_matrix_pitched_float_edit.cpp  gpu_matrix_vs_gpu_matrix_pitched_float_test.cpp
test/gpu_matrix_vs_gpu_matrix_pitched_stdcomplexdouble/: CMakeLists.txt  MultiplyMatrixScalar.sh  MultiplyMatrixVectorHermitianTest .sh  MultiplyMatrixVectorTest.sh  gpu_matrix_vs_gpu_matrix_pitched_stdcomplexdouble_edit.cpp  gpu_matrix_vs_gpu_matrix_pitched_stdcomplexdouble_test.cpp
test/gpu_matrix_vs_gpu_matrix_pitched_stdcomplexfloat/: CMakeLists.txt  MultiplyMatrixScalar.sh  MultiplyMatrixVectorHermitianTest .sh  MultiplyMatrixVectorTest.sh  gpu_matrix_vs_gpu_matrix_pitched_stdcomplexfloat_edit.cpp  gpu_matrix_vs_gpu_matrix_pitched_stdcomplexfloat_test.cpp
test/gpu_vector/: CMakeLists.txt  gpu_vector_test.cpp
test/irgn/: CMakeLists.txt  cmd-dicom.txt  cufft_test.cpp  gendicom.hpp  irgn.cpp  irgn.hpp  irgnmain.cpp  l2solve.hpp  readSiemens.hpp  readSiemensVD11.hpp  readSiemensVD11_.hpp  readdicom.hpp  tgvsolve.hpp  tvsolve.hpp
test/lsqr_test/: CMakeLists.txt  lsqr_test.cpp
test/matlab_3d_matrix_I_O/: 3D_matrix_I_O.cpp  CMakeLists.txt  matlab_test_3Dmatrix_I_O.m  writeMatlab2Bin_3D.m
test/matlab_fft_test/: CMakeLists.txt  fft_test.cpp  fft_test_kspace.cpp  fft_test_matlab.m  fft_test_matlab_kspace.m  img_brain_t2.mat
test/pcg_test/: CMakeLists.txt  pcg_test.cpp
test/scalarproduct_test/: CMakeLists.txt  scalarproduct_test.cpp
test/vector_example/: CMakeLists.txt  example.cu
tutorial/: CMakeLists.txt  index_tutorial.dox
tutorial/tut01/: CMakeCache.txt  Makefile  cmake_install.cmake  intro.txt  program.cpp  result.txt  tutorial.dox
tutorial/tut02/: intro.txt  program.cpp  result.txt  tutorial.dox
tutorial/tut03/: intro.txt  program.cpp  result.txt  tutorial.dox
tutorial/tut04/: intro.txt  program.cpp  result.txt  tutorial.dox
tutorial/tut05/: intro.txt  program.cpp  result.txt  tutorial.dox
tutorial/tut06/: intro.txt  program.cpp  result.txt  tutorial.dox
tutorial/tut07/: CMakeLists.txt  intro.txt  result.txt  tutorial.dox
tutorial/tut08/: CMakeLists.txt.backup  intro.txt  program.cpp  result.txt  tutorial.dox
tutorial/tutxx/: CMakeLists.txt  intro.txt  program.cpp  result.txt
unittest/: CMakeLists.txt  gpu_cs_matrix_test.cpp  gpu_matrix_test.cpp  gpu_vector_test.cpp  large_gpu_matrix_test.cpp  large_gpu_vector_test.cpp  test_main.cpp  unittestreport.css  unittestreport.xsl
(+78 files in other folders)
