# $Id: CMakeLists.txt 476 2011-06-16 08:54:14Z freiberger $

# List of source files which have to be compiled for this test.
set (SOURCES dense_matrix_IO_test.cpp)

# The resulting executable.
add_executable(dense_matrix_IO_Test ${SOURCES})

# End of $Id: CMakeLists.txt 476 2011-06-16 08:54:14Z freiberger $.

