# $Id: CMakeLists.txt 476 2011-06-16 08:54:14Z freiberger $

# List of source files which have to be compiled for this test.
set (SOURCES gpu_matrix_pitched_test.cpp)

# The resulting executable.
add_executable(gpu_matrix_pitched_test ${SOURCES})

# End of $Id: CMakeLists.txt 476 2011-06-16 08:54:14Z freiberger $.

