# $Id: CMakeLists.txt 494 2011-07-26 10:55:57Z huber $

# List of source files which have to be compiled for this test.
set (SOURCES gpu_matrix_vs_gpu_matrix_pitched_stdcomplexdouble_test.cpp)

# The resulting executable.
add_executable(gpu_matrix_vs_gpu_matrix_pitched_stdcomplexdouble_test ${SOURCES})

# End of $Id: CMakeLists.txt 494 2011-07-26 10:55:57Z huber $.

